welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: not found: value prendBicuit
prendBicuit();
^