welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estSurBiscuit==false){
	recule();
}
prendBicuit();
if (estSurBiscuit){
	recule();poseBiscuit();recule();
}else{
	avance();
}
